--- a/B2C-WebApi/appsettings.json
+++ b/B2C-WebApi/appsettings.json
@@ -1,12 +1,12 @@
 {
   "AzureAdB2C": {
-    "Tenant": "fabrikamb2c.onmicrosoft.com",
-    "ClientId": "25eef6e4-c905-4a07-8eb4-0d08d5df8b3f",
-    "Policy": "b2c_1_susi",
+    "Tenant": "mtosh.onmicrosoft.com",
+    "ClientId": "a431fedd-a014-489a-a43b-9c9e530b21fd",
+    "Policy": "B2C_1_SignIn",
 
-    "ScopeRead": "demo.read",
-    "ScopeWrite": "demo.write"
-    },
+    "ScopeRead": "Api.Read",
+    "ScopeWrite": "Api.Write"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
